--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="sv">
 <head>
   <meta charset="UTF-8" />
+  
   <title>Mall</title>
+  
+<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600&display=swap" rel="stylesheet">
   <style>
 :root {
   --bg-main: #0f172a;
@@ -603,9 +606,7 @@ section.serie > fieldset.relations {
   white-space: nowrap;
 }
 
-.ff-submenu li:hover {
-  background: #1e293b;
-}
+
 
 .ff-submenu a {
   color: #e5e7eb;
@@ -641,6 +642,360 @@ section.serie > fieldset.relations {
   padding: 0.4rem 0.6rem;
 }
 
+
+
+
+
+.ff-submenu li:hover {
+  background: #1e293b;
+}
+
+.ff-menu > li::after {
+  content: " ▾";
+  font-size: 0.65em;
+  opacity: 0.6;
+}
+
+.ff-submenu > li:has(.ff-submenu)::after {
+  content: " ▸";
+  float: right;
+  opacity: 0.6;
+}
+
+.ff-submenu {
+  opacity: 0;
+  transform: translateY(4px);
+  transition: opacity 0.15s ease, transform 0.15s ease;
+}
+
+.ff-menu li:hover > .ff-submenu {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+/* === Modern floating top menu === */
+
+.ff-topbar {
+  position: fixed;
+  top: 0.75rem;
+  left: 50%;
+  transform: translateX(-50%);
+  width: fit-content;
+  padding: 0.35rem 0.6rem;
+  background: rgba(2, 6, 23, 0.85);
+  backdrop-filter: blur(12px);
+  border: 1px solid rgba(148, 163, 184, 0.15);
+  border-radius: 14px;
+  box-shadow: 0 12px 40px rgba(0,0,0,0.45);
+  z-index: 3000;
+}
+
+/* Top-level menu */
+.ff-menu {
+  display: flex;
+  gap: 0.25rem;
+}
+
+/* Top tabs */
+.ff-menu > li {
+  padding: 0.45rem 0.9rem;
+  font-size: 0.8rem;
+  font-weight: 600;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #e5e7eb;
+  border-radius: 10px;
+  cursor: default;
+  position: relative;
+}
+
+/* Hover highlight */
+.ff-menu > li:hover {
+  background: linear-gradient(
+    180deg,
+    rgba(56, 189, 248, 0.18),
+    rgba(56, 189, 248, 0.08)
+  );
+  box-shadow: inset 0 0 0 1px rgba(56, 189, 248, 0.35);
+}
+
+/* Down arrow */
+.ff-menu > li::after {
+  content: "▾";
+  font-size: 0.65em;
+  margin-left: 0.35rem;
+  opacity: 0.6;
+}
+
+/* Dropdown panel */
+.ff-submenu {
+  background: rgba(2, 6, 23, 0.85);
+  backdrop-filter: blur(14px);
+  border: 1px solid rgba(148, 163, 184, 0.2);
+  border-radius: 14px;
+  padding: 0.35rem 0.35rem;
+  min-width: 220px;
+  margin-top: 0.4rem;
+  box-shadow: 0 20px 60px rgba(0,0,0,0.65);
+
+  opacity: 0;
+  transform: translateY(6px);
+  transition: opacity 0.18s ease, transform 0.18s ease;
+}
+
+/* Show dropdown */
+.ff-menu li:hover > .ff-submenu {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+/* Submenu rows */
+.ff-submenu li {
+  font-size: 0.8rem;
+  padding: 0.5rem 0.75rem;
+  border-radius: 10px;
+  color: #e5e7eb;
+}
+
+
+
+/* Right-side submenus */
+.ff-submenu.right {
+  top: 0;
+  left: calc(100% + 0.4rem);
+}
+
+/* Arrow for nested menus */
+.ff-submenu > li:has(.ff-submenu)::after {
+  content: "▸";
+  float: right;
+  opacity: 0.5;
+}
+
+.ff-submenu {
+  transition:
+    opacity 0.18s ease,
+    transform 0.18s cubic-bezier(.2,.8,.2,1);
+}
+
+.ff-menu > li::after {
+  transition: transform 0.2s ease, opacity 0.2s ease;
+}
+
+.ff-menu > li:hover::after {
+  transform: rotate(180deg);
+  opacity: 0.9;
+}
+
+.ff-menu li > .ff-submenu {
+  pointer-events: none;
+}
+
+.ff-menu li:hover > .ff-submenu {
+  pointer-events: auto;
+}
+
+.ff-menu > li {
+  position: relative;
+}
+
+.ff-menu > li::before {
+  content: "";
+  position: absolute;
+  left: 12px;
+  right: 12px;
+  bottom: 4px;
+  height: 2px;
+  background: linear-gradient(
+    90deg,
+    rgba(56,189,248,0),
+    rgba(56,189,248,0.8),
+    rgba(56,189,248,0)
+  );
+  opacity: 0;
+  transform: scaleX(0.6);
+  transition: opacity 0.2s ease, transform 0.2s ease;
+}
+
+.ff-menu > li:hover::before {
+  opacity: 1;
+  transform: scaleX(1);
+}
+
+.ff-submenu.right {
+  transform: translateX(6px);
+}
+
+.ff-menu li:hover > .ff-submenu.right {
+  transform: translateX(0);
+}
+
+/* === Slightly larger, more confident menu === */
+
+.ff-topbar {
+  padding: 0.5rem 0.75rem;
+}
+
+.ff-menu > li {
+  font-size: 1.0rem;      /* var ~0.8 */
+  padding: 0.55rem 1.1rem;
+}
+
+.ff-submenu li {
+  font-size: 0.95rem;     /* var ~0.8 */
+  padding: 0.7rem 0.85rem;
+}
+
+.ff-menu {
+  gap: 0.5rem;
+}
+
+.ff-topbar {
+  font-family: "IBM Plex Sans", system-ui, sans-serif;
+}
+
+.ff-topbar {
+  background: #020617;
+  border-bottom: 1px solid #334155;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.35);
+}
+
+.ff-topbar {
+  background: rgba(2, 4, 23, 3.9);
+  backdrop-filter: blur(0px);
+}
+
+.ff-submenu {
+  background: #020617;   /* solid */
+  backdrop-filter: none; /* viktigt */
+}
+
+.ff-submenu li {
+  color: #f1f5f9;
+  font-weight: 500;
+}
+
+.ff-menu > li {
+  color: #f8fafc; /* nästan vit */
+}
+
+.ff-submenu li {
+  color: #cbd5f5;
+}
+
+.ff-menu > li:hover {
+  color: #7dd3fc; /* accent */
+}
+
+.ff-submenu li:hover {
+  color: #ffffff;
+}
+
+
+
+.ff-menu > li {
+  transition: transform 0.12s ease, color 0.12s ease;
+}
+
+.ff-menu > li:hover {
+  transform: translateY(1px);
+}
+
+.ff-menu > li:focus-visible {
+  outline: none;
+  box-shadow: inset 0 0 0 2px #38bdf8;
+  border-radius: 6px;
+}
+
+.ff-submenu {
+  transition: opacity 0.12s ease;
+}
+
+.ff-menu > li:hover {
+  background: rgba(255,255,255,0.04);
+  color: #7dd3fc;
+}
+
+.ff-menu > li,
+.ff-submenu li,
+.ff-submenu a {
+  color: #f1f5f9;
+}
+
+.ff-menu > li,
+.ff-submenu li,
+.ff-submenu a {
+  color: white !important;
+}
+
+.ff-menu > li {
+  text-transform: none;
+}
+
+.ff-topbar,
+.ff-submenu {
+  backdrop-filter: none;
+}
+
+.ff-topbar {
+  background: #020617;
+}
+
+.ff-submenu {
+  background: #020617;
+}
+
+.ff-menu > li {
+  color: #f8fafc;   /* nästan vit */
+  font-weight: 600;
+}
+
+.ff-submenu li,
+.ff-submenu a {
+  color: #e5e7eb;   /* ljusgrå, inte blå */
+}
+
+.ff-submenu li:hover {
+  background: rgba(255,255,255,0.05);
+  color: #ffffff;
+}
+
+.ff-topbar {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.ff-menu > li,
+.ff-submenu li {
+  letter-spacing: 0.01em;
+}
+
+font-family: Inter, system-ui, sans-serif;
+
+.ff-topbar {
+  font-family: "JetBrains Mono", monospace;
+}
+
+.ff-topbar {
+  color: #d1d5db; /* ljusgrå */
+}
+
+.ff-menu > li {
+  color: #e5e7eb;
+  font-weight: 1100;
+}
+
+.ff-submenu li,
+.ff-submenu a {
+  color: #ffffff;
+}
+
+.u {
+  text-decoration: underline;
+  text-underline-offset: 3px;
+}
+
+
   </style>
 </head>
 <body>
@@ -653,43 +1008,43 @@ section.serie > fieldset.relations {
     <li>
       Manifestation
       <ul class="ff-submenu right">
-        <li>– gestaltar VerkX</li>
-        <li>– gestaltar UttryckX</li>
-        <li>– är en del av SerieX</li>
+        <li>– <span class="u">gestaltar</span> VerkX</li>
+        <li>– <span class="u">gestaltar</span> UttryckX</li>
+        <li>– <span class="u">gestaltar</span> SerieX</li>
       </ul>
     </li>
 
     <li>
       Agent
       <ul class="ff-submenu right">
-        <li>– är skapare av VerkX</li>
-        <li>– är bidragsgivare till UttryckX</li>
+        <li>– <span class="u">är skapare av</span> VerkX</li>
+        <li>– <span class="u">är bidragsgivare till</span> UttryckX</li>
       </ul>
     </li>
 
     <li>
       Verk
       <ul class="ff-submenu right">
-        <li>– är skapat av AgentX</li>
-        <li>– förverkligas av UttryckX</li>
-        <li>– ingår i SerieX</li>
-        <li>– gestaltas av ManifestationX</li>
+        <li>– <span class="u">är skapat av</span> AgentX</li>
+        <li>– <span class="u">förverkligas av</span> UttryckX</li>
+        <li>– <span class="u">ingår i</span> SerieX</li>
+        <li>– <span class="u">gestaltas av</span> ManifestationX</li>
       </ul>
     </li>
 
     <li>
       Uttryck
       <ul class="ff-submenu right">
-        <li>– är bidraget av AgentX</li>
-        <li>– förverkligar VerkX</li>
-        <li>– gestaltas av ManifestationX</li>
+        <li>– <span class="u">är bidraget av</span> AgentX</li>
+        <li>– <span class="u">förverkligar</span> VerkX</li>
+        <li>– <span class="u">gestaltas av</span> ManifestationX</li>
       </ul>
     </li>
 
     <li>
       Serie
       <ul class="ff-submenu right">
-        <li>– inkluderar ManifestationX</li>
+        <li>– <span class="u">inkluderar</span> ManifestationX</li>
       </ul>
     </li>
   </ul>
