--- a/index.html
+++ b/index.html
@@ -739,8 +739,8 @@ section.serie > fieldset.relations {
       Agent
       <ul class="ff-submenu right">
       
-<li><a href="https://metadatabyran.kb.se/auktoritetsarbete-och-agenter/organisationer/foredraget-namn-for-organisationer"_blank">Föredraget namn Org</a></li>
- <li><a href="https://metadatabyran.kb.se/auktoritetsarbete-och-agenter/personer/foredraget-namn-for-personer"_blank">Föredraget namn Person</a> </li>
+<li><a href="https://metadatabyran.kb.se/auktoritetsarbete-och-agenter/organisationer/foredraget-namn-for-organisationer" target="_blank">Föredraget namn Org</a></li>
+ <li><a href="https://metadatabyran.kb.se/auktoritetsarbete-och-agenter/personer/foredraget-namn-for-personer" target="_blank">Föredraget namn Person</a> </li>
 <li><a href="https://metadatabyran.kb.se/auktoritetsarbete-och-agenter/personer/fodelsetid-och-eller-dodstid" target="_blank">Födelse-/dödstid</a></li>
 <li><a href="https://viaf.org/en" target="_blank">ID</a></li>
       </ul>
@@ -787,7 +787,7 @@ section.serie > fieldset.relations {
           <a href="https://metadatabyran.kb.se/generella-anvisningar---rda/verk-och-uttryck/egenskaper-som-beskriver-verk-och-uttryck/innehallstyp" target="_blank">Innehållstyp</a>
         </li>
 <li>
-          <a href="https://metadatabyran.kb.se/generella-anvisningar---rda/verk-och-uttryck/egenskaper-som-beskriver-verk-och-uttryck/sprak	"_blank">Språk</a>
+          <a href="https://metadatabyran.kb.se/generella-anvisningar---rda/verk-och-uttryck/egenskaper-som-beskriver-verk-och-uttryck/sprak" target="_blank">Språk</a>
         </li>
       </ul>
     </li>
