--- a/index.html
+++ b/index.html
@@ -732,36 +732,32 @@ section.serie > fieldset.relations {
 <body>
 <nav class="ff-topbar">
   <ul class="ff-menu">
-<li>
-  Egenskaper
-  <ul class="ff-submenu">
-    <li>
-      Agent
-      <ul class="ff-submenu right">
-      
-<li><a href="https://metadatabyran.kb.se/auktoritetsarbete-och-agenter/organisationer/foredraget-namn-for-organisationer" target="_blank">Föredraget namn Org</a></li>
- <li><a href="https://metadatabyran.kb.se/auktoritetsarbete-och-agenter/personer/foredraget-namn-for-personer" target="_blank">Föredraget namn Person</a> </li>
-<li><a href="https://metadatabyran.kb.se/auktoritetsarbete-och-agenter/personer/fodelsetid-och-eller-dodstid" target="_blank">Födelse-/dödstid</a></li>
-<li><a href="https://viaf.org/en" target="_blank">ID</a></li>
-      </ul>
-    </li>
-    <li>
-      Manifestation
-      <ul class="ff-submenu right">
-        <li><a href="https://metadatabyran.kb.se/generella-anvisningar---rda/manifestation-instans/egenskaper-som-beskriver-en-manifestation/barartyp?searchTerm=B%C3%A4rartyp" target="_blank">Bärartyp</a></li>
-        <li><a href="https://metadatabyran.kb.se/generella-anvisningar---rda/manifestation-instans/egenskaper-som-beskriver-en-manifestation/copyrightar?searchTerm=Copyright%C3%A5r" target="_blank">Copyrightår</a></li>
-        <li><a href="https://metadatabyran.kb.se/generella-anvisningar---rda/manifestation-instans/egenskaper-som-beskriver-en-manifestation/titel" target="_blank">Huvudtitel</a></li>
-<li><a href="https://metadatabyran.kb.se/generella-anvisningar---rda/manifestation-instans/egenskaper-som-beskriver-en-manifestation/identifikator-for-manifestationen" target="_blank">Identifikator</a></li>
-<li><a href="https://metadatabyran.kb.se/generella-anvisningar---rda/manifestation-instans/egenskaper-som-beskriver-en-manifestation/serieuppgift#h-SeriesISSN" target="_blank">ISSN</a></li>
-<li><a href="https://metadatabyran.kb.se/generella-anvisningar---rda/manifestation-instans/egenskaper-som-beskriver-en-manifestation/medietyp" target="_blank">Medietyp</a></li>
-<li><a href="https://metadatabyran.kb.se/generella-anvisningar---rda/manifestation-instans/egenskaper-som-beskriver-en-manifestation/omfang" target="_blank">Omfång</a></li>
-<li><a href="https://metadatabyran.kb.se/generella-anvisningar---rda/manifestation-instans/egenskaper-som-beskriver-en-manifestation/tillverkningsuppgift#h-Tillverkningstid" target="_blank">Tillverkningstid</a></li>
-<li><a href="https://metadatabyran.kb.se/generella-anvisningar---rda/manifestation-instans/egenskaper-som-beskriver-en-manifestation/upphovsuppgift" target="_blank">Upphovsuppgift</a></li>
-<li><a href="https://metadatabyran.kb.se/generella-anvisningar---rda/manifestation-instans/egenskaper-som-beskriver-en-manifestation/upplageuppgift" target="_blank">Upplageuppgift</a></li>
-<li><a href="https://metadatabyran.kb.se/generella-anvisningar---rda/manifestation-instans/egenskaper-som-beskriver-en-manifestation/utgivningsuppgift#h-Utgivarnamn" target="_blank">Utgivarnamn</a></li>
-<li><a href="https://metadatabyran.kb.se/generella-anvisningar---rda/manifestation-instans/egenskaper-som-beskriver-en-manifestation/utgivningsuppgift#h-Utgivningstid" target="_blank">Utgivningstid</a></li>
-      </ul>
-    </li>
+    <li>Egenskaper
+      <ul class="ff-submenu">
+        <li>Agent
+          <ul class="ff-submenu right">
+            <li><a href="https://metadatabyran.kb.se/auktoritetsarbete-och-agenter/organisationer/foredraget-namn-for-organisationer" target="_blank">Föredraget namn Org</a></li>
+            <li><a href="https://metadatabyran.kb.se/auktoritetsarbete-och-agenter/personer/foredraget-namn-for-personer" target="_blank">Föredraget namn Person</a></li>
+            <li><a href="https://metadatabyran.kb.se/auktoritetsarbete-och-agenter/personer/fodelsetid-och-eller-dodstid" target="_blank">Födelse-/dödstid</a></li>
+            <li><a href="https://viaf.org/en" target="_blank">ID</a></li>
+          </ul>
+        </li>
+        <li>Manifestation
+          <ul class="ff-submenu right">
+            <li><a href="https://metadatabyran.kb.se/generella-anvisningar---rda/manifestation-instans/egenskaper-som-beskriver-en-manifestation/barartyp?searchTerm=B%C3%A4rartyp" target="_blank">Bärartyp</a></li>
+            <li><a href="https://metadatabyran.kb.se/generella-anvisningar---rda/manifestation-instans/egenskaper-som-beskriver-en-manifestation/copyrightar?searchTerm=Copyright%C3%A5r" target="_blank">Copyrightår</a></li>
+            <li><a href="https://metadatabyran.kb.se/generella-anvisningar---rda/manifestation-instans/egenskaper-som-beskriver-en-manifestation/titel" target="_blank">Huvudtitel</a></li>
+            <li><a href="https://metadatabyran.kb.se/generella-anvisningar---rda/manifestation-instans/egenskaper-som-beskriver-en-manifestation/identifikator-for-manifestationen" target="_blank">Identifikator</a></li>
+            <li><a href="https://metadatabyran.kb.se/generella-anvisningar---rda/manifestation-instans/egenskaper-som-beskriver-en-manifestation/serieuppgift#h-SeriesISSN" target="_blank">ISSN</a></li>
+            <li><a href="https://metadatabyran.kb.se/generella-anvisningar---rda/manifestation-instans/egenskaper-som-beskriver-en-manifestation/medietyp" target="_blank">Medietyp</a></li>
+            <li><a href="https://metadatabyran.kb.se/generella-anvisningar---rda/manifestation-instans/egenskaper-som-beskriver-en-manifestation/omfang" target="_blank">Omfång</a></li>
+            <li><a href="https://metadatabyran.kb.se/generella-anvisningar---rda/manifestation-instans/egenskaper-som-beskriver-en-manifestation/tillverkningsuppgift#h-Tillverkningstid" target="_blank">Tillverkningstid</a></li>
+            <li><a href="https://metadatabyran.kb.se/generella-anvisningar---rda/manifestation-instans/egenskaper-som-beskriver-en-manifestation/upphovsuppgift" target="_blank">Upphovsuppgift</a></li>
+            <li><a href="https://metadatabyran.kb.se/generella-anvisningar---rda/manifestation-instans/egenskaper-som-beskriver-en-manifestation/upplageuppgift" target="_blank">Upplageuppgift</a></li>
+            <li><a href="https://metadatabyran.kb.se/generella-anvisningar---rda/manifestation-instans/egenskaper-som-beskriver-en-manifestation/utgivningsuppgift#h-Utgivarnamn" target="_blank">Utgivarnamn</a></li>
+            <li><a href="https://metadatabyran.kb.se/generella-anvisningar---rda/manifestation-instans/egenskaper-som-beskriver-en-manifestation/utgivningsuppgift#h-Utgivningstid" target="_blank">Utgivningstid</a></li>
+          </ul>
+        </li>
 
     <li>
       Serie
