--- a/index.html
+++ b/index.html
@@ -759,45 +759,31 @@ section.serie > fieldset.relations {
           </ul>
         </li>
 
-    <li>
-      Serie
-      <ul class="ff-submenu right">
-<li>
-          <a href="https://metadatabyran.kb.se/generella-anvisningar---rda/manifestation-instans/egenskaper-som-beskriver-en-manifestation/serieuppgift#h-Huvudtiteltillserie" target="_blank">Huvudtitel</a>
+        <li>Serie
+          <ul class="ff-submenu right">
+            <li><a href="https://metadatabyran.kb.se/generella-anvisningar---rda/manifestation-instans/egenskaper-som-beskriver-en-manifestation/serieuppgift#h-Huvudtiteltillserie" target="_blank">Huvudtitel</a></li>
+            <li><a href="https://metadatabyran.kb.se/generella-anvisningar---rda/manifestation-instans/egenskaper-som-beskriver-en-manifestation/serieuppgift#h-SeriesISSN" target="_blank">ID</a></li>
+            <li><a href="https://metadatabyran.kb.se/generella-anvisningar---rda/manifestation-instans/egenskaper-som-beskriver-en-manifestation/serieuppgift#h-Numreringinomserie" target="_blank">Num. Inom serien</a></li>
+          </ul>
         </li>
-<li>
-          <a href="https://metadatabyran.kb.se/generella-anvisningar---rda/manifestation-instans/egenskaper-som-beskriver-en-manifestation/serieuppgift#h-SeriesISSN" target="_blank">ID</a>
-        </li>
-<li>
-          <a href="https://metadatabyran.kb.se/generella-anvisningar---rda/manifestation-instans/egenskaper-som-beskriver-en-manifestation/serieuppgift#h-Numreringinomserie" target="_blank">Num. Inom serien</a>
-        </li>
-      </ul>
-    </li>
 
-    <li>
-      Uttryck<ul class="ff-submenu right">
-<li>
-          <a href="   https://metadatabyran.kb.se" target="_blank">ID</a>
+        <li>Uttryck
+          <ul class="ff-submenu right">
+            <li><a href="https://metadatabyran.kb.se" target="_blank">ID</a></li>
+            <li><a href="https://metadatabyran.kb.se/generella-anvisningar---rda/verk-och-uttryck/egenskaper-som-beskriver-verk-och-uttryck/innehallstyp" target="_blank">Innehållstyp</a></li>
+            <li><a href="https://metadatabyran.kb.se/generella-anvisningar---rda/verk-och-uttryck/egenskaper-som-beskriver-verk-och-uttryck/sprak" target="_blank">Språk</a></li>
+          </ul>
         </li>
-<li>
-          <a href="https://metadatabyran.kb.se/generella-anvisningar---rda/verk-och-uttryck/egenskaper-som-beskriver-verk-och-uttryck/innehallstyp" target="_blank">Innehållstyp</a>
-        </li>
-<li>
-          <a href="https://metadatabyran.kb.se/generella-anvisningar---rda/verk-och-uttryck/egenskaper-som-beskriver-verk-och-uttryck/sprak" target="_blank">Språk</a>
-        </li>
-      </ul>
-    </li>
 
-    <li>
-      Verk
-      <ul class="ff-submenu right">
-        <li><a href="https://metadatabyran.kb.se/generella-anvisningar---rda/verk-och-uttryck/egenskaper-som-beskriver-verk-och-uttryck/foredragen-titel-for-verket" target="_blank">Föredragen titel</a></li>
-        <li><a href="https://viaf.org/en" target="_blank">ID</a></li>
-        <li><a href="https://metadatabyran.kb.se/generella-anvisningar---rda/verk-och-uttryck/egenskaper-som-beskriver-verk-och-uttryck/malgrupp" target="_blank">Målgrupp</a></li>
+        <li>Verk
+          <ul class="ff-submenu right">
+            <li><a href="https://metadatabyran.kb.se/generella-anvisningar---rda/verk-och-uttryck/egenskaper-som-beskriver-verk-och-uttryck/foredragen-titel-for-verket" target="_blank">Föredragen titel</a></li>
+            <li><a href="https://viaf.org/en" target="_blank">ID</a></li>
+            <li><a href="https://metadatabyran.kb.se/generella-anvisningar---rda/verk-och-uttryck/egenskaper-som-beskriver-verk-och-uttryck/malgrupp" target="_blank">Målgrupp</a></li>
+          </ul>
+        </li>
       </ul>
     </li>
-  </ul>
-  </li>  
     <li>
   Relationer
   <ul class="ff-submenu">
