--- a/index.html
+++ b/index.html
@@ -726,6 +726,75 @@ section.serie > fieldset.relations {
   color: #cbd5f5;
 }
 
+.ff-submenu {
+  background: #C0E9F0;
+  border-radius: 6px;
+  box-shadow: 0 6px 18px rgba(0,0,0,.08);
+  padding: 0.5rem 0;
+}
+
+.ff-submenu li {
+  padding: 0.4rem 1.2rem;
+}
+.ff-submenu > li {
+  position: relative;
+}
+
+.ff-submenu > li > span,
+.ff-submenu > li:not(:has(ul)) {
+  color: #222;
+}
+
+.ff-submenu,
+.ff-submenu li {
+  color: #111;
+}
+
+.ff-submenu a {
+  color: inherit;
+}
+
+.ff-menu > li {
+  font-weight: 600;
+}
+
+.ff-submenu > li {
+  font-weight: 500;
+}
+
+.ff-submenu li li {
+  font-weight: 400;
+}
+
+.ff-menu > li {
+  letter-spacing: 0.02em;
+}
+
+.ff-submenu a {
+  text-decoration: underline;
+  text-decoration-thickness: 1px;
+  text-underline-offset: 0.2em;
+  text-decoration-color: rgba(0,0,0,.35);
+}
+
+.ff-submenu a:hover {
+  text-decoration-color: rgba(0,0,0,.8);
+}
+
+.u {
+  text-decoration-line: underline;
+  text-decoration-color: currentColor;
+  text-decoration-thickness: 1px;
+  text-underline-offset: 0.15em;
+}
+
+.ff-submenu a:hover .u {
+  color: inherit;
+}
+.ff-submenu li,
+.ff-submenu li a {
+  font-weight: 600;
+}
 
   </style>
 </head>
